--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://seelematic.github.io/"
+  "homepage": "https://faceshrink.com/"
 }
